--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </div>
     </section>
 
-    <section class="school" id="link-school">
+    <!-- <section class="school" id="link-school">
       <div class="container">
         <h2 class="title">В школе вы получите</h2>
         <ul class="school__items">
@@ -187,9 +187,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="motivation">
+    <!-- <section class="motivation">
       <div class="container">
         <h2 class="title motivation__title">Покоряй вершины</h2>
         <div class="motivation__text">
@@ -220,9 +220,9 @@
       <div class="motivation__bg" style="background-image: url(./images/serfer.jpg);">
         <span class="visually-hidden">фото для текста слева</span>
       </div>
-    </section>
+    </section> -->
 
-    <section class="gallery">
+    <!-- <section class="gallery">
       <div class="container">
         <h2 class="gallery__title title">галерея</h2>
 
@@ -330,9 +330,9 @@
 
         </ul>
       </div>
-    </section>
+    </section> -->
 
-    <section class="blog" id="link-blog">
+    <!-- <section class="blog" id="link-blog">
       <h2 class="blog__title title">Блог</h2>
 
       <ul class="blog-slider">
@@ -459,9 +459,9 @@
         </li>
 
       </ul>
-    </section>
+    </section> -->
 
-    <section class="team" id="link-team">
+    <!-- <section class="team" id="link-team">
       <div class="container">
         <h2 class="team__title title">наша команда</h2>
 
@@ -492,9 +492,9 @@
 
         </ul>
       </div>
-    </section>
+    </section> -->
 
-    <section class="tariffs" id="link-tariffs">
+    <!-- <section class="tariffs" id="link-tariffs">
       <div class="container">
         <h2 class="tariffs__title title">пакеты услуг</h2>
         <ul class="tariffs__items">
@@ -549,9 +549,9 @@
 
         </ul>
       </div>
-    </section>
+    </section> -->
 
-    <section class="contacts">
+    <!-- <section class="contacts">
       <div class="map">
         <div class="map__img">
           <img src="images/map.jpg" alt="Местоположение на карте">
@@ -608,7 +608,7 @@
           <li class="social__item"> <a class="social__link" href="#">youtube</a></li>
         </ul>
       </div>
-    </section>
+    </section> -->
   </main>
 
   <footer class="footer" id="link-footer">
